# duct-tape

./: Cargo.toml  README.md  package.json
fixture/: a.js  anotherFile.js  b.js  index.js  strings.js
fixtures/react/: index.html  package.json
fixtures/react/src/: App.tsx
src/: compiler.rs  diagnostics.rs  imports.rs  js_module.rs  lib.rs  main.rs  module_builder.rs  module_graph.rs  module_loader.rs  parser.rs  template.rs  utils.rs
src/transforms/: mod.rs  runtime_imports.rs
