[package]
name = "ducttape"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecmascript = { version = "0.43.0", features = ["parser", "transforms", "module", "optimization", "react", "typescript", "utils", "visit", "codegen", "utils"] }
swc_ecma_preset_env = "0.27.0"
swc_common = { version = "0.10.21", features = ["tty-emitter", "sourcemap"] }
swc_atoms = "0.2.6"
node-resolve = "2"
rayon = "1"
crossbeam-channel = "0.5.1"
clap = "2.33.3"